--- a/package.json
+++ b/package.json
@@ -3,9 +3,7 @@
   "version": "0.2.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
+    "buffer": "^6.0.3",
     "ol": "^7.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -14,7 +12,6 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
